# satisfactory

./: .gitignore  README.md  pyproject.toml  recipes.tsv  recipes_dsp.tsv  recipes_factorio.tsv  recipes_foundry.tsv  run.py
.streamlit/: config.toml
src/satisfactory/: __init__.py  app.py
src/satisfactory/data/: __init__.py  dsp_loader.py  factorio_loader.py  loader.py
src/satisfactory/engine/: __init__.py  aggregator.py  calculator.py
src/satisfactory/models/: __init__.py  build_chain.py  game_mode.py  recipe.py
src/satisfactory/persistence/: __init__.py  storage.py
src/satisfactory/ui/: components.py  summary_view.py  tree_view.py
